--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,17 +1,23 @@
 <resources>
     <string name="app_name">HealthExpress</string>
 
-    <string-array name="function_array">
-        <item>首页</item>
-        <item>最爱</item>
-        <item>分享</item>
-    </string-array>
-    <string name="title_activity_main">MainActivity</string>
-
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-    <string name="drawer_open">打开</string>
-    <string name="drawer_close">关闭</string>
-    <string name="action_websearch">搜索</string>
-    <string name="home_page">首页</string>
+    <string name="open_drawer">Open drawer</string>
+    <string name="close_drawer">Close drawer</string>
+    <string name="search">Search</string>
+    <string name="refresh">Refresh</string>
+
+    <!--drawer view-->
+    <string name="settings">Settings</string>
+    <string name="health">Health</string>
+    <string name="favorites">Favorites</string>
+    <string name="joke">Joke</string>
+    <string name="change_theme">Change theme</string>
+    <string name="about_us">About us</string>
+    <string name="more">More</string>
+
+    <!--tabs-->
+    <string name="recommend">Recommend</string>
+    <string name="category">Category</string>
+    <string name="topic">Topic</string>
 </resources>
